# BPD

./: .gitignore  .python-version  LICENSE  README.md  fit-cells-jax.ipynb  fit-cells.ipynb  fit-single.ipynb  pyproject.toml  requirements.txt  samples.py  setup.py  utils.py
.github/workflows/: tests.yml
bpd/: __init__.py  bootstrap.py  chains.py  diagnostics.py  draw.py  initialization.py  io.py  jackknife.py  likelihood.py  measure.py  noise.py  nuts.py  optimization.py  pipelines.py  plotting.py  prior.py  sample.py  save_load.py  shear.py  slurm.py  utils.py
bpd/pipelines/: image_ellips.py  image_samples.py  image_samples_fixed_flux.py  shear_inference.py  toy_ellips.py
experiments/: cell_coadd.py  single_gal.py  single_gal_flux.py  two_shears.py  two_shears_vectorized.py
experiments/configs/: single_gal.yaml  single_gal_flux.yaml
experiments/exp1/: README.md  get_figures.sh  get_posteriors.sh  make_figures.py
experiments/exp2/: README.md  get_posteriors.sh  make_figures.py  run_inference_galaxy_images.py  run_slurm.sbatch
experiments/exp20/: make_figures.py  run_inference_galaxy_images.py
experiments/exp21/: Makefile  README.md  get_convergence.py  get_figures.py  get_posteriors.sh  run_inference_galaxy_images.py  run_slurm.sbatch  slurm_run_inference.py
experiments/exp22/: Makefile  README.md  collate_samples.py  exp22-rhats-ess.ipynb  get_convergence.py  get_interim_samples.py  get_samples_full.py  get_samples_full_slurm.py  slurm_full_samples.py
experiments/exp23/: Makefile  README.md  get_convergence.py  get_figures.py  get_samples_full.py  get_samples_timing.py  slurm_full_samples.py  slurm_run_timing.py
experiments/exp2_optimization/: README.md  get_posteriors.sh  make_figures.py  run_inference_galaxy_images.py
experiments/exp3/: README.md  get_image_interim_samples_fixed.py  get_posteriors.sh  make_figures.py  run_interim.sh  run_interim1.sh
experiments/exp30/: README.md  get_figures.sh  get_image_interim_samples_fixed.py  get_posteriors.sh  make_figures.py
experiments/exp31/: README.md  get_interim_samples.py  get_posteriors.sh  make_figures.py
experiments/exp32/: README.md  get_interim_samples.py  get_posteriors.sh  get_shear.py  make_figures.py
experiments/exp4/: README.md  get_interim_samples.py  get_posteriors.sh  make_figures.py
experiments/exp40/: Makefile  README.md  collate_samples.py  get_figures.py  get_interim_samples.py  get_samples.sh  get_shear_jackknife.py  get_shear_posteriors.sh  make_figures.py  simple_jackknife.py  slurm_get_interim_samples.py
experiments/exp41/: Makefile  README.md
experiments/exp42/: Makefile  README.md
experiments/exp43/: Makefile  README.md
experiments/exp44/: Makefile  README.md
experiments/exp45/: Makefile  README.md
experiments/exp46/: Makefile  README.md  slurm_jackknife.py
experiments/exp50/: Makefile  README.md  collate_samples.py  get_figures.py  get_interim_samples.py  get_shear_jackknife.py  slurm_get_interim_samples.py
experiments/exp60/: Makefile  README.md  get_figures.py  get_shear_and_sn_from_shapes.py
notebooks/: NUTS-benchmark1.ipynb  NUTS-benchmark2.ipynb  NUTS-benchmark2_4.ipynb  NUTS-chains-v2_2.ipynb  aug25-check-exp70-means.ipynb  aug26-compare-means.ipynb  aug28-calibration.ipynb  aug28-compare-means-10k-exp.ipynb  aug29-likelihood-slow.ipynb  benchmark-fourier-gpu-07-24.ipynb  benchmark-single-gal-fit.ipynb  blackjax-chains-v1.ipynb  blackjax-chains-v2.ipynb  blackjax-chains-v2_1-HMC.ipynb  bulge_disk_exp1.ipynb  check-exp-samples-exp22.ipynb  check-exp-samples-exp23.ipynb  check-exp40-samples.ipynb  check-gaaxy-fits1.ipynb  check-likelihood-toy1.ipynb  check-samples.ipynb  check_galaxy_samples.ipynb  chees-benchmark1.ipynb  debug-JK-SNC-2.ipynb  debug-JK-SNC-3.ipynb  dec2-test-spergel-free.ipynb  ess-figure1.ipynb  exp4_check1.ipynb  exp50-check-data.ipynb  exp70-check-samples-v2.ipynb  exp70-check-samples.ipynb  exp71-check-samples-v2.ipynb  exp71-check-samples.ipynb  exp72-check-samples-v2.ipynb  exp72-check-samples.ipynb  exp73-check-samples.ipynb  exp80-1.ipynb  fit-cells-jax-real-density.ipynb  fit-cells-jax.ipynb  fit-single-blackjax-vmap.ipynb  (+57 more)
paper/: gprop_cache.npz  snr_cache.npy  table_bias.txt  table_bias_boot.txt  table_bias_subset.txt
scripts/: get_image_interim_samples.py  get_image_interim_samples_fixed1.py  get_image_interim_samples_fixed_flux.py  get_paper_figures.py  get_shear_all_free.py  get_shear_and_sn_from_shapes.py  get_shear_from_interim_samples.py  get_shear_from_post_ellips.py  get_shear_from_shapes.py  get_toy_ellip_samples.py  image_shear_gpu_one_galaxy.py  log.txt  mp_toy_shear_cpu.py  one_galaxy_image_interim_samples.py  one_galaxy_shear.py  slurm_toy_shear_vectorized.py  toy_shear_vectorized.py  vect_toy_shear_gpu.py
tests/: conftest.py  test_combine_subposts.py  test_convergence.py  test_draw.py  test_flux_distribution.py  test_jax_galsim.py  test_script.py  test_shear_inference.py  test_shear_trans.py
(+149 files in other folders)
