[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"


[project]
name = "BPD"
authors = [{ name = "Ismael Mendoza" }]
description = "Bayesian Pixel Domain method for shear inference."
version = "0.0.1"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["numpy >=1.18.0", "galsim >=2.3.0", "jax >=0.4.30", "jaxlib", "blackjax >=1.2.0"]


[project.optional-dependencies]
dev = ["pytest", "click", "ruff", "ChainConsumer"]


[project.urls]
home = "https://github.com/LSSTDESC/BPD"


[tool.setuptools.packages.find]
include = ["bpd*"]


[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "SIM", "PLE", "PLC", "PLW", "RUF"]
ignore = ["C901", "E203", "E501", "E731", "PLC0206"]
preview = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
